--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -66,7 +66,9 @@
                     {% else %}
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Preview</h6>
+
+                            <h6 class="m-0 font-weight-bold text-primary float-left">Preview</h6>
+                            <button class="btn btn-success btn-sm float-right">Import</button>
                         </div>
                         <div class="card-body">
                             <table class="table table-bordered">
