--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -77,15 +77,20 @@
                                     <th>{{ col }}</th>
                                     {% endfor %}
                                 </tr>
-                                {% for ind,val in result['data_presensi'].iterrows() : %}
-                                <tr>
-                                    <td>{{ val['Date'] }}</td>
-                                    <td>{{ val['Name'] }}</td>
-                                    <td>{{ val['Participant_id'] }}</td>
-                                    <td>{{ val['Status'] }}</td>
-                                    <td>{{ val['First Check In'] }}</td>
-                                    <td>{{ val['Last Check Out'] }}</td>
+                                {% for ind,val in result['data_presensi'].iterrows() %}
+                                {% if val['duplicated'] %}
+                                <tr class="table-warning">
+                                    {% for value in val.values %}
+                                    <td>{{ value }}</td>
+                                    {% endfor %}
                                 </tr>
+                                {% else %}
+                                <tr>
+                                    {% for value in val.values %}
+                                    <td>{{ value }}</td>
+                                    {% endfor %}
+                                </tr>
+                                {% endif %}
                                 {% endfor %}
                             </table>
                         </div>
