--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -69,6 +69,9 @@
 
                             <h6 class="m-0 font-weight-bold text-primary float-left">Preview</h6>
                             <button class="btn btn-success btn-sm float-right">Import</button>
+                            {% if result['duplicated'] %}
+                            <button class="btn btn-info btn-sm float-right mr-2">Import (Ignore Duplicate)</button>
+                            {% endif %}
                         </div>
                         <div class="card-body">
                             <table class="table table-bordered">
