--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -68,9 +68,9 @@
                         <div class="card-header py-3">
 
                             <h6 class="m-0 font-weight-bold text-primary float-left">Preview</h6>
-                            <a class="btn btn-success btn-sm float-right text-light">Import</a>
+                            <a class="btn btn-success btn-sm float-right text-light" href="/importpresensi/insertdb/replace">Import</a>
                             {% if result['duplicated'] %}
-                            <a class="btn btn-info btn-sm float-right mr-2 text-light">Import (Ignore Duplicate)</a>
+                            <a class="btn btn-info btn-sm float-right mr-2 text-light" href="/importpresensi/insertdb/ignore">Import (Ignore Duplicate)</a>
                             {% endif %}
                         </div>
                         <div class="card-body">
