--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                     <div class="dropdown mb-4" style="margin-left:25px;">
                         <button class="btn text-light dropdown-toggle" type="button"
                             id="dropdownyears" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"  style="background-color:#86cecb;">
+                            aria-expanded="false"  style="background-color:#5F7161;">
                             2022
                         </button>
                         <div class="dropdown-menu animated--fade-in"
