--- a/templates/participants.html
+++ b/templates/participants.html
@@ -29,7 +29,44 @@
 <body id="page-top">
     <div id="wrapper">
         {% include 'sidebar.html' %}
-        
+        <div id="content-wrapper" class="d-flex flex-column">
+            <div id="content">
+                <!-- Begin Page Content -->
+                <div class="container-fluid">
+
+                    <!-- Page Heading -->
+                    <h1 class="h3 mb-4 text-gray-800" style="margin-top:30px;">Participant List</h1>
+                    <div class="row">
+                        <div class="col-lg-8 col-md-6 mb-4">
+                                <div class="card shadow h-100 py-1">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <table class="table">
+                                                    <tr>
+                                                        <th>Participant ID</th>
+                                                        <th>Name</th>
+                                                        <th>Department</th>
+                                                    </tr>
+                                                    
+                                                        {% for ind,val in result['data_participant'].iterrows() %}
+                                                        <tr>
+                                                            <td>{{ val['Participant ID'] }}</td>
+                                                            <td>{{ val['Name'] }}</td>
+                                                            <td>{{ val['Department'] }}</td>
+                                                        </tr>
+                                                        {% endfor %}
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     {% include 'script-include.html' %}
 </body>
